# FundFlow-Stellar-Crowdfunding

./: README.md  index.html  package.json
contract/: Cargo.toml
contract/src/: lib.rs
src/: App.jsx  index.css  main.jsx
src/components/: CampaignCard.jsx  DonationModal.jsx  Navbar.jsx  ProgressBar.jsx  Sidebar.jsx  Toast.jsx  TxStatusBadge.jsx
src/lib/: soroban.js  wallet.jsx
src/pages/: Activity.jsx  Admin.jsx  CampaignDetail.jsx  Campaigns.jsx  CreateCampaign.jsx  Home.jsx  Settings.jsx  Transactions.jsx
