[package]
name = "fundflow_crowdfund"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "fundflow_crowdfund"

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[profile.release]
codegen-units = 1
debug = false
opt-level = "z"
lto = true
panic = "abort"
strip = true
